# DrakmodPlayer

./: .gitmodules  LICENSE  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release-build.yml
.run/: DragonModPlayer [_app_projectHealth buildHealth].run.xml  DrakmodPlayer [_app_projectHealth buildHealth].run.xml  DrakmodPlayer [formatKotlin].run.xml  DrakmodPlayer [lintChecks].run.xml  DrakmodPlayer [wrapper --gradle-version 9.5.1].run.xml  Launch DHU.run.xml  app.run.xml
app/: build.gradle.kts
app/config/libraries/: libopenmpt.json  libxmp.json
app/schemas/com.lossydragon.modplayer.db.AppDatabase/: 7.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lossydragon/modplayer/: App.kt  MainActivity.kt
app/src/main/java/com/lossydragon/modplayer/core/: Constants.kt  CrashHandler.kt  FileLoggingTree.kt  UriSerializer.kt
app/src/main/java/com/lossydragon/modplayer/data/: DownloadHistoryRepository.kt  ModArchiveService.kt  ModuleRepository.kt  PlaylistExportImport.kt  PlaylistRepository.kt  ResultPagingSource.kt
app/src/main/java/com/lossydragon/modplayer/db/: AppDatabase.kt  AppPreferences.kt
app/src/main/java/com/lossydragon/modplayer/db/dao/: DownloadHistoryDao.kt  ModuleDao.kt  ModuleMetadataDao.kt  PlaylistDao.kt
app/src/main/java/com/lossydragon/modplayer/db/entity/: ModuleEntity.kt
app/src/main/java/com/lossydragon/modplayer/di/: AppModule.kt
app/src/main/java/com/lossydragon/modplayer/model/: ArchiveModels.kt  DownloadModels.kt  FileBrowserModels.kt  ModuleFile.kt  PlayerModels.kt  QueueState.kt
app/src/main/java/com/lossydragon/modplayer/player/: AudioFocusHandler.kt  AutoBrowseCallback.kt  AutoMediaId.kt  ModPlayer.kt  NativeModuleBackend.kt  PlayerEngine.kt  PlayerService.kt  PlayerViewModel.kt  RenderingBackend.kt  ResamplerMode.kt
app/src/main/java/com/lossydragon/modplayer/player/model/: ChannelSnapshot.kt  FrameSnapshot.kt  PatternData.kt
app/src/main/java/com/lossydragon/modplayer/ui/: AppNavHost.kt  MainNavigation.kt  NavKey.kt
app/src/main/java/com/lossydragon/modplayer/ui/components/: ProgressbarIndicator.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/browser/: FileBrowserScreen.kt  FileBrowserViewModel.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/browser/components/: BrowserInputField.kt  BrowserListItem.kt  ModuleList.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/downloads/: DownloadSearchScreen.kt  DownloadsViewModel.kt  NavDownloads.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/downloads/components/: DownloadListItem.kt  HeaderText.kt  ListItem.kt  ModuleDetailLayout.kt  MonoSpaceText.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/downloads/screen/: DownloadHistoryScreen.kt  DownloadModuleScreen.kt  DownloadResultScreen.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/downloads/viewmodel/: DownloadViewModel.kt  ModuleResultViewModel.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/player/: PlayerScreen.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/player/components/: ChannelView.kt  ChipList.kt  DurationsSheet.kt  MiniPlayerBar.kt  PatternInfoRow.kt  PatternView.kt  PlaybackProgress.kt  PlayerBottom.kt  QueueSheet.kt  TransportRow.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/playlists/: PlaylistsScreen.kt  PlaylistsViewModel.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/playlists/components/: DeletePlaylistDialog.kt  NewPlaylistDialog.kt  PlaylistEntriesFabMenu.kt  PlaylistEntryItem.kt  PlaylistListItem.kt  PlaylistsFabMenu.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/preferences/: NavPreferences.kt  PreferencesAbout.kt  PreferencesFormats.kt  PreferencesScreen.kt
app/src/main/java/com/lossydragon/modplayer/ui/screens/preferences/components/: LabelRadioButton.kt  MultiChoiceAlertDialog.kt  (+3 more)
app/src/main/java/com/lossydragon/modplayer/ui/theme/: Theme.kt
app/src/main/java/com/lossydragon/modplayer/util/: Activity.kt  Formatting.kt  MediaStore.kt  Permissions.kt  SafUtils.kt  String.kt  UriUtils.kt
app/src/main/keepRules/: rules.keep
app/src/main/res/drawable/: aa_browser.xml  aa_playlists.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libxmp/: .gitignore  build.gradle.kts  consumer-rules.pro
libxmp/src/main/cpp/: CMakeLists.txt  audio.h  oboe.cpp  openmpt-jni.cpp  xmp-jni.cpp
libxmp/src/main/cpp/patches/: openmpt-waveform-api.patch
libxmp/src/main/java/org/helllabs/libxmp/: Xmp.kt
libxmp/src/main/java/org/helllabs/libxmp/model/: AudioStats.kt  ChannelInfo.kt  FrameInfo.kt  ModInfo.kt  ModVars.kt  Sequence.kt
renderer/: .gitignore  build.gradle.kts  consumer-rules.pro
renderer/src/main/cpp/: CMakeLists.txt  audio.h  oboe.cpp  player-common.cpp  player-common.h  player-jni.cpp  player-libopenmpt.cpp  player-libxmp.cpp  player.h  xmp-jni.cpp
renderer/src/main/java/com/lossydragon/native/: Player.kt  RenderingBackend.kt  ResamplerMode.kt
renderer/src/main/java/com/lossydragon/native/model/: AudioStats.kt  ChannelInfo.kt  FrameInfo.kt  ModInfo.kt  ModVars.kt  Sequence.kt
renderer/src/main/java/org/helllabs/libxmp/: OpenMpt.kt  Xmp.kt
renderer/src/main/java/org/helllabs/libxmp/model/: AudioStats.kt
tools/: AA Icons.psd  launch-head-unit.bat
(+9 files in other folders)
